--- a/WPFTest/Views/Windows/MainWindow.xaml
+++ b/WPFTest/Views/Windows/MainWindow.xaml
@@ -13,14 +13,45 @@
         <vm:MainWindowViewModel/>           
     </Window.DataContext>
     
-    <Grid>
-        <TextBox HorizontalAlignment="Left" 
-                 Height="23" 
-                 Margin="56,36,0,0" 
-                 TextWrapping="Wrap" 
-                 Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" 
-                 VerticalAlignment="Top" 
-                 Width="302"/>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Файл">
+                <MenuItem Header="Выход"/>
+            </MenuItem>
+            <MenuItem Header="Помощь">
+                <MenuItem Header="О Программе"/>
+            </MenuItem>
+        </Menu>
+        <StatusBar DockPanel.Dock="Bottom">
+            <StatusBarItem>
+                <TextBlock Text="1234"/>
+            </StatusBarItem>
+            <StatusBarItem>
+                <ProgressBar Width="128" Height="14" Value="30"/>
+            </StatusBarItem>
+        </StatusBar>
+        <TabControl>
+            <TabItem Header="Вкладка 1">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="200*"/>
+                        <ColumnDefinition Width="600*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50*"/>
+                        <RowDefinition Height="200*"/>
+                    </Grid.RowDefinitions>
 
-    </Grid>
+                    <Rectangle Grid.Column="0" Grid.Row="0" 
+                               Margin="5, 7"
+                               Fill="Blue" Stroke="Red" 
+                               StrokeThickness="3" 
+                               RadiusX="5" RadiusY="7"/>
+                    <Ellipse Grid.Column="1" Grid.Row="0"
+                             Fill="Red" Stroke="Blue" StrokeThickness="3"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Вкладка 2"></TabItem>
+        </TabControl>
+    </DockPanel>
 </Window>
