--- a/WPFTest/Views/Windows/MainWindow.xaml
+++ b/WPFTest/Views/Windows/MainWindow.xaml
@@ -23,8 +23,8 @@
             </MenuItem>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
-            <StatusBarItem>
-                <TextBlock Text="1234"/>
+            <StatusBarItem Width="150">
+                <TextBlock Text="{Binding Status}"/>
             </StatusBarItem>
             <StatusBarItem>
                 <ProgressBar Width="128" Height="14" Value="30"/>
