--- a/WPFTest/Views/Windows/MainWindow.xaml
+++ b/WPFTest/Views/Windows/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFTest"
+        xmlns:cmd="clr-namespace:WPFTest.Infrastructure.Commands"
         xmlns:vm="clr-namespace:WPFTest.ViewModels"
         mc:Ignorable="d"
         Title="{Binding Title}" 
@@ -16,7 +17,13 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Файл">
-                <MenuItem Header="Выход" Command="{Binding CloseApplicationCommand}"/>
+                <!--<MenuItem Header="Выход" Command="{Binding CloseApplicationCommand}"/>-->
+                <MenuItem Header="Выход">
+                    <MenuItem.Command>
+                        <cmd:CloseApplicationCommand />
+                    </MenuItem.Command>                    
+                </MenuItem>
+                
             </MenuItem>
             <MenuItem Header="Помощь">
                 <MenuItem Header="О Программе"/>
