--- a/WPFTest/Views/Windows/MainWindow.xaml
+++ b/WPFTest/Views/Windows/MainWindow.xaml
@@ -9,20 +9,27 @@
         mc:Ignorable="d"
         Title="{Binding Title}" 
         Height="450" 
-        Width="800">
+        Width="800" >
+    <Window.InputBindings>
+        <KeyBinding Modifiers="Alt" Key="X" Command="{Binding CloseApplicationCommand}"/>
+    </Window.InputBindings>
     <Window.DataContext>
         <vm:MainWindowViewModel/>           
     </Window.DataContext>
+    <Window.Resources>
+        <cmd:CloseApplicationCommand x:Key="CloseApplicationCommand"/>
+    </Window.Resources>
     
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Файл">
                 <!--<MenuItem Header="Выход" Command="{Binding CloseApplicationCommand}"/>-->
-                <MenuItem Header="Выход">
+                <MenuItem Header="Выход" Command="{StaticResource CloseApplicationCommand}"/>
+                <!--<MenuItem Header="Выход">
                     <MenuItem.Command>
                         <cmd:CloseApplicationCommand />
                     </MenuItem.Command>                    
-                </MenuItem>
+                </MenuItem>-->
                 
             </MenuItem>
             <MenuItem Header="Помощь">
@@ -55,7 +62,12 @@
                                StrokeThickness="3" 
                                RadiusX="5" RadiusY="7"/>
                     <Ellipse Grid.Column="1" Grid.Row="0"
-                             Fill="Red" Stroke="Blue" StrokeThickness="3"/>
+                             Fill="Red" Stroke="Blue" StrokeThickness="3">
+                        <Ellipse.InputBindings>
+                            <MouseBinding Command="{Binding CloseApplicationCommand}"
+                                          MouseAction="LeftDoubleClick"/>
+                        </Ellipse.InputBindings>
+                    </Ellipse>
                 </Grid>
             </TabItem>
             <TabItem Header="Вкладка 2"></TabItem>
