--- a/WPFTest/Views/Windows/MainWindow.xaml
+++ b/WPFTest/Views/Windows/MainWindow.xaml
@@ -11,15 +11,15 @@
         Title="{Binding Title}" 
         Height="450" 
         Width="800" >
-    <Window.InputBindings>
-        <KeyBinding Modifiers="Alt" Key="X" Command="{Binding CloseApplicationCommand}"/>
-    </Window.InputBindings>
     <Window.DataContext>
         <vm:MainWindowViewModel/>           
     </Window.DataContext>
     <Window.Resources>
         <cmd:CloseApplicationCommand x:Key="CloseApplicationCommand"/>
     </Window.Resources>
+    <Window.InputBindings>
+        <KeyBinding Modifiers="Alt" Key="X" Command="{StaticResource CloseApplicationCommand}"/>
+    </Window.InputBindings>
     
     <DockPanel>
         <Menu DockPanel.Dock="Top">
@@ -71,7 +71,7 @@
                     <Ellipse Grid.Column="1" Grid.Row="0"
                              Fill="Red" Stroke="Blue" StrokeThickness="3">
                         <Ellipse.InputBindings>
-                            <MouseBinding Command="{Binding CloseApplicationCommand}"
+                            <MouseBinding Command="{StaticResource CloseApplicationCommand}"
                                           MouseAction="LeftDoubleClick"/>
                         </Ellipse.InputBindings>
                     </Ellipse>
